# novel-crawler

./: .dockerignore  .env  .env.example  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
cli/: __init__.py  main.py  scheduler.py
docs/: api.md  architecture.md  测试服部署流程.md  爬取流程.md  短剧爬虫功能详解.md  部署指南.md
scripts/: export_drama_zh.py  export_fanqie_ranks.py  init_db.py
src/: __init__.py
src/novel_crawler/: __init__.py  main.py
src/novel_crawler/api/: __init__.py  books.py  reelshort.py  stats.py  tasks.py
src/novel_crawler/config/: __init__.py  config_loader.py  database.py  secrets.py
src/novel_crawler/core/: __init__.py  base_parser.py  base_spider.py  events.py
src/novel_crawler/dao/: __init__.py  book_dao.py  dramashort_dao.py  fanqie_rank_dao.py  reelshort_dao.py
src/novel_crawler/llm/: __init__.py  client.py
src/novel_crawler/observability/: __init__.py  alerting.py  logging_config.py  metrics_collector.py
src/novel_crawler/pipeline/: clean.py  dramashort_clean.py  font_mapper.py  ocr_mapping.json  reelshort_clean.py  validator.py
src/novel_crawler/schemas/: __init__.py  book.py  stats.py  task.py
src/novel_crawler/services/: __init__.py  book_service.py  chapter_service.py  dramashort_translate_service.py  health_check.py  orchestrator.py  reelshort_classify_service.py  reelshort_tag_translate_service.py  reelshort_translate_service.py  task_service.py
src/novel_crawler/spiders/: __init__.py
src/novel_crawler/spiders/dramashort/: __init__.py  config.py  page_parser.py  spider.py
src/novel_crawler/spiders/fanqie/: __init__.py  browser_manager.py  config.py  data_processor.py  human_simulator.py  page_parser.py  spider.py
src/novel_crawler/spiders/reelshort/: __init__.py  api_client.py  config.py  page_parser.py  spider.py
src/novel_crawler/tools/: __init__.py  cache_manager.py  check_duplicates.py  cleanup_duplicates.py  export.py  migrate_unique_constraint.py  stats.py  verify.py
tests/: __init__.py  conftest.py  test_book_db.py  test_book_mysql.py  test_book_simple.py  test_category_top30.py  test_font_decode.py  test_playwright_detail.py  test_selenium.py  test_single_book.py
tests/debug/: blocked_page.html  no_chapter_page.html
tests/e2e/: test_full_crawl.py
tests/integration/: test_health_check.py  test_spider_flow.py  test_storage.py
tests/unit/: test_config.py  test_data_clean.py  test_font_mapper.py
